--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,14 @@
-icewm -- authors file.  2019-01-05
+icewm -- authors file.  2019-02-04
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Author: openSUSE Weblate <weblate-noreply@opensuse.org>
+Author: wisememo <46960734+wisememo@users.noreply.github.com>
+Author: Sarah Kriesch <ada.lovelace@gmx.de>
+Author: Franziska Weinberger <f.weinberger@gemino.de>
 Author: Jorge Gallegos Carrasco <jcarrascochih@gmail.com>
+Author: Juan Sarria <juansarriam@gmail.com>
+Author: Patricia Pazos <pms.malaga@hermestrans.com>
+Author: openSUSE Weblate <weblate-noreply@opensuse.org>
+Author: Brian Bidulock <bidulock@openss7.org>
 Author: Alessio Adamo <alessio.adamo@gmail.com>
 Author: nikoss <nikoss@users.noreply.github.com>
 Author: Dmitriy Khanzhin <dmitriy.khanzhin@gmail.com>
@@ -19,11 +25,9 @@ Author: Ferdinand Galko <galko.ferdinand@gmail.com>
 Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
 Author: YunSeok Choi <xein@naver.com>
 Author: varmanishant <nishant.varma@gmail.com>
-Author: Brian Bidulock <bidulock@openss7.org>
 Author: Brian Bidulock <bidulock@openss7.com>
 Author: Antoine Belvire <antoine.belvire@opensuse.org>
 Author: Eduard Bloch <blade@debian.org>
-Author: Sarah Kriesch <ada.lovelace@gmx.de>
 Author: jc sl <trcs@gmx.com>
 Author: Sir Mobus Gochfulshigan Dorphin Esquire XXIII <celestialtuba@gmail.com>
 Author: Yi-Jyun Pan <pan93412@gmail.com>
@@ -34,7 +38,6 @@ Author: Matthew Wong <mawong@redhat.com>
 Author: Ad Soyad <kalemlik100@yandex.com>
 Author: Jiri Bohac <jbohac@suse.cz>
 Author: ddekany <ddekany@apache.org>
-Author: Juan Sarria <juansarriam@gmail.com>
 Author: Robert Taisz <robert.taisz@emerald.hu>
 Author: Grace Yu <grace.yu@excel-gits.com>
 Author: Hwajin Kim <hwajin.kim@e4net.net>
@@ -49,7 +52,6 @@ Author: George Yacoub <george.yacoub@arabize.com>
 Author: Andriy Bandura <andriykopanytsia@gmail.com>
 Author: Davide Aiello <davidea@novilinguists.com>
 Author: G. Allen Morris III <gam3@gam3.net>
-Author: Franziska Weinberger <f.weinberger@gemino.de>
 Author: Ruta Reknere <ruta.reknere@nordtext.com>
 Author: zhengqiang130 <qzheng@suse.com>
 Author: anonymous <>
