--- a/po/es.po
+++ b/po/es.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: IceWM 1.2.26\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2019-01-18 09:24-0700\n"
+"POT-Creation-Date: 2019-02-04 21:04+0100\n"
 "PO-Revision-Date: 2019-01-25 16:05+0000\n"
 "Last-Translator: Jorge Gallegos Carrasco <jcarrascochih@gmail.com>\n"
-"Language-Team: Spanish <https://l10n.opensuse.org/projects/icewm/"
-"icewm-1-4-branch/es/>\n"
+"Language-Team: Spanish <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1174,8 +1174,8 @@ msgid ""
 msgstr ""
 "Uso: icewmbg [OPCIONES]\n"
 "Si se pueden dar varios valores, se separan por comas.\n"
-"Si la imagen es un directorio, se usan todas las imágenes de ese directorio."
-"\n"
+"Si la imagen es un directorio, se usan todas las imágenes de ese "
+"directorio.\n"
 "\n"
 "Options:\n"
 "  -p, --replace        sustituye un icewmbg existente.\n"
@@ -1806,7 +1806,7 @@ msgstr "_Actualizar"
 msgid "_License"
 msgstr "_Licencia"
 
-#: src/wmtaskbar.cc:356 src/wmtaskbar.cc:975
+#: src/wmtaskbar.cc:356 src/wmtaskbar.cc:979
 msgid "Hide Taskbar"
 msgstr "Ocultar barra de tareas"
 
@@ -1822,7 +1822,7 @@ msgstr "Menú de lista de ventana"
 msgid "Show Desktop"
 msgstr "Mostrar escritorio"
 
-#: src/wmtaskbar.cc:975
+#: src/wmtaskbar.cc:979
 msgid "Show Taskbar"
 msgstr "Mostrar barra de tareas"
 
